--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,17 +1,23 @@
 <%- include("header") -%>
 
+
+  <h1 id="main-heading">“Confidence comes from discipline and training.” – Robert Kiyosaki</h1>
   <div class="box" id="heading">
-    <h1 id = "heading"> <%= listTitle %> </h1>
+    <h1 id="heading">
+      <%= listTitle %>
+    </h1>
   </div>
 
   <div class="box">
     <%newListItems.forEach(function(item){%>
 
-      <form  action="/delete" method="post">
+      <form action="/delete" method="post">
 
         <div class="item">
           <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
-          <p><%=  item.name  %></p>
+          <p>
+            <%= item.name %>
+          </p>
         </div>
 
         <input type="hidden" name="listName" value="<%= listTitle %>"></input>
@@ -20,14 +26,14 @@
 
 
 
-    <%});%>
+      <%});%>
 
 
 
-      <form class="item" action="/" method="post">
-        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-        <button type="submit" name="list" value="<%= listTitle %>">+</button>
-      </form>
+        <form class="item" action="/" method="post">
+          <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+          <button type="submit" name="list" value="<%= listTitle %>">+</button>
+        </form>
   </div>
 
-<%- include("footer") -%>
+  <%- include("footer") -%>
