--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>Everyday Cehck List</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
